--- a/index.css
+++ b/index.css
@@ -1,33 +1,35 @@
-* {
-  user-select: none;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+*{
+  user-select: all;
+  margin:auto;
+  padding:;
+  box-sizing = border-box;
+  height:1cm;
 }
 
-header {
-  border-style: dotted;
-  border-color: brown;
-  min-height: 14vh;
-  background-color: whitesmoke;
-  color: black;
-}
- footer{
-    background-image:none;
-    color:blue;
-    height: 14vh;
-    border-style:dot;
-    border-color: chocolate;
-}
-article{
-    border-style: groove;
-    border-width: 1vh;
-    height: 14vh;
-    border-color: aqua;
-    background-color: white;
-    color: blue;
+.app{
+  background-size: 1cm;
+ background-color:azure;
+ outline-color: black;
+ column-rule-color: brown;
+ height:100vh
 
 }
-.element{
-    margin:1000px
+header{
+  border-style:ridge;
+  border-color: black;
+  flood-color: black
+  colour:black;
+  height: 3cm;
+}
+main{
+  border-style:ridge;
+  border-color: black;
+  color: #2b89e2;
+  height:10cm;
+}
+footer{
+  border-style:ridge;
+  border-color: black;
+  color: #2b89e2;
+  height:10cm;
 }
